tests/semantic_errors/comparison_mismatch.snl
program comparisonMismatch
var integer x;
    char c;
begin
    if x < c then
        write(x)
    else
        write(x)
    fi
end.
